# opencl-book-samples

./: Installation.md  ProjectHome.md  README.md
cmake/: FindDirectX.cmake  FindGLEW.cmake  FindOpenCL.cmake
src/: CMakeLists.txt
src/Chapter_10/GLinterop/: CMakeLists.txt  GLinterop.cpp
src/Chapter_11/D3Dinterop/: CMakeLists.txt  D3Dinterop.fx
src/Chapter_12/Sinewave/: sinewave.cl  sinewave.cpp
src/Chapter_12/VectorAdd/: vecadd.cpp
src/Chapter_13/histogram/: CMakeLists.txt  histogram.cpp  histogram_image.cl
src/Chapter_14/histogram/: CMakeLists.txt  Makefile  histogram.cpp
src/Chapter_16/Dijkstra/: CMakeLists.txt  oclDijkstra.cpp
src/Chapter_19/oclFlow/: CMakeLists.txt  lkflow.cl  motion.cl  oclFlow.cpp  readme.txt
src/Chapter_19/oclFlow/data/minicooper/: frame10.pgm
src/Chapter_2/HelloWorld/: CMakeLists.txt  HelloWorld.cpp
src/Chapter_20/PyImageFilter2D/: ImageFilter2D.cl  ImageFilter2D.py
src/Chapter_22/: matrix_gen.c  spmv.c  spmv.h
src/Chapter_3/OpenCLConvolution/: CMakeLists.txt  Convolution.cpp
src/Chapter_3/OpenCLInfo/: CMakeLists.txt  OpenCLInfo.cpp
src/Chapter_6/HelloBinaryWorld/: CMakeLists.txt  HelloBinaryWorld.cpp  HelloWorld.cl
src/Chapter_7/RayTracer/: raytracer.cpp
src/Chapter_7/SimpleBufferSubBuffer/: CMakeLists.txt  info.hpp  simple.cl  simple.cpp
src/Chapter_8/ImageFilter2D/: CMakeLists.txt  ImageFilter2D.cpp
trunk/: CMakeLists.txt
trunk/cmake/: FindGLEW.cmake
trunk/src/: CMakeLists.txt
trunk/src/Chapter_10/GLinterop/: CMakeLists.txt  GLinterop.cl  GLinterop.cpp
trunk/src/Chapter_11/D3Dinterop/: CMakeLists.txt  D3Dinterop.cl  D3Dinterop.cpp
trunk/src/Chapter_12/Sinewave/: CMakeLists.txt  sinewave.cpp
trunk/src/Chapter_12/VectorAdd/: CMakeLists.txt  vecadd.cpp
trunk/src/Chapter_13/histogram/: histogram.c
trunk/src/Chapter_16/Dijkstra/: CMakeLists.txt  oclDijkstra.cpp  oclDijkstraKernel.cpp  oclDijkstraKernel.h
trunk/src/Chapter_19/oclFlow/: CMakeLists.txt  filters.cl  flowGL.cpp  readme.txt
trunk/src/Chapter_19/oclFlow/data/minicooper/: frame11.pgm
trunk/src/Chapter_2/HelloWorld/: CMakeLists.txt  HelloWorld.cpp
trunk/src/Chapter_20/PyImageFilter2D/: ImageFilter2D.py
trunk/src/Chapter_22/: CMakeLists.txt  matrix_gen.c  spmv.cl
trunk/src/Chapter_3/OpenCLConvolution/: CMakeLists.txt  Convolution.cl  Convolution.cpp
trunk/src/Chapter_3/OpenCLInfo/: CMakeLists.txt  OpenCLInfo.cpp
trunk/src/Chapter_6/HelloBinaryWorld/: CMakeLists.txt  HelloBinaryWorld.cpp
trunk/src/Chapter_7/RayTracer/: raytracer.cl  raytracer.hpp
trunk/src/Chapter_7/SimpleBufferSubBuffer/: CMakeLists.txt  simple.cl  simple.cpp
trunk/src/Chapter_8/ImageFilter2D/: CMakeLists.txt  ImageFilter2D.cpp
wiki/: Installation.wiki
